# xmux

./: Cargo.toml  PLAN.md  PLAN_NOTIFICATION.md  README.md
src/: app.rs  config.rs  event.rs  input.rs  layout.rs  main.rs  notification_server.rs  pane.rs  render.rs  sidebar.rs  window.rs
