[package]
name = "xmux"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
vt100 = "0.15"
unicode-width = "0.2"
tokio-stream = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
